Add iOS Scriptable code to export startup data

--- a/index.html
+++ b/index.html
@@ -100,14 +100,12 @@
     </div>
 
     <script>
-        function handleLogin(event) {
+        async function handleLogin(event) {
             event.preventDefault();
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
 
-            // Placeholder for logic to call game API and forward data to your server
-            console.log("Login attempt with:", username, password);
+            
         }
+
     </script>
 </body>
 </html>
